# license-zero-test-crate

./: Cargo.toml  LICENSE  licensezero.json
src/: lib.rs  main.rs
