[package]
name = "license-zero-test-crate"
version = "3.0.0"
description = "License Zero test crate"
authors = ["Kyle E. Mitchell <kyle@kemitchell.com>"]
license = "Parity-7.0.0"
edition = "2018"

[dependencies]

[[package.metadata.licensezero.offers]]
server = "https://broker.licensezero.com"
offerID = "6f59a982-6982-4495-b59b-3f233ab8ad71"
